--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,9 @@ header {
     font-size: 4em;
     font-weight: 700;
     position: fixed;
-    z-index:10;
+    z-index: 10;
+    transition-property: background-color border;
+    transition-delay: 1s;
 }
 
 header .inner {
@@ -41,25 +43,27 @@ header .inner #logo a #logo_img {
     height: 60px;
     position: relative;
 }
-header .inner #logo a #logo_img #logo_img_blue{
+
+header .inner #logo a #logo_img #logo_img_blue {
     opacity: 1;
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     transition: all 1s;
 }
 
-header .inner #logo a #logo_img #logo_img_white{
+header .inner #logo a #logo_img #logo_img_white {
     opacity: 0;
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     transition: all 1s;
 }
 
 header .inner #logo a span {
     color: #00B6FF;
 }
+
 header .inner ul {
     display: flex;
     column-gap: 28px;
@@ -91,13 +95,16 @@ header .inner ul #language_select div {
     color: #00B6FF;
     line-height: 120%;
 }
-header .inner ul #language_select div #language-icon{
+
+header .inner ul #language_select div #language-icon {
     color: #00B6FF;
 }
-header .inner ul #language_select div #language-korean{
+
+header .inner ul #language_select div #language-korean {
     color: #00B6FF;
     width: 55px;
 }
+
 header .inner ul li .second_category {
     display: flex;
     flex-direction: column;
@@ -111,14 +118,15 @@ header .inner ul li .second_category {
     border-radius: 8px;
     border: 2px solid #00B6FF;
     backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     width: 170%;
 }
+
 .first_category,
 #language_icon,
 #language-korean,
-#logo_text{
- transition: color 1s;
+#logo_text {
+    transition: color 1s;
 }
 
 
@@ -151,98 +159,116 @@ header .inner ul li .second_category li:first-child {
 header .inner ul li .second_category li:last-child {
     padding-bottom: 0px;
 }
+
 header .inner ul li .second_category li a {
     color: #333333;
 }
 
 header .inner ul li .second_category li a:hover {
-    color:#00B6FF;
+    color: #00B6FF;
 }
+
 /*MAIN SECTION*/
 body {
     position: relative;
-    height: 40000PX;
     overflow-x: hidden;
 }
 
-#main_section{
+#main_section {
     height: 6500px;
 }
+
 section .full_inner {
     position: sticky;
-    top:0px;
+    top: 0px;
     /* background-color: pink; */
     width: 100vw;
     height: 100vh;
 }
-section .full_inner #img_box{
+
+section .full_inner #img_box {
     position: absolute;
-    margin:0 auto;
+    margin: 0 auto;
     width: 500px;
     height: 500px;
     border-radius: 50%;
     overflow: hidden;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-image: url('../img/main/howl_background.png');
     background-repeat: no-repeat;
     background-size: auto 100%;
     animation: howl_background_move 200s alternate infinite;
     background-position: 100% 50%;
-    transition:all 1s;
+    transition: all 1s;
 }
-section .full_inner #img_box img{
+
+section .full_inner #img_box img {
     position: absolute;
-    left:-25%;
+    left: -25%;
     bottom: 0%;
     width: 150%;
     animation: howl_move 1.5s alternate infinite;
     transition: all 1s;
 }
-@keyframes howl_move{
-        to{transform:translate(0,0);}
-        from{transform:translate(5px,0px);}    
+
+@keyframes howl_move {
+    to {
+        transform: translate(0, 0);
+    }
+
+    from {
+        transform: translate(5px, 0px);
+    }
 }
-@keyframes howl_background_move{
-    to{background-position: 0% 50%;}
-    from{background-color: 50% 50%;}
+
+@keyframes howl_background_move {
+    to {
+        background-position: 0% 50%;
+    }
+
+    from {
+        background-color: 50% 50%;
+    }
 }
-section .full_inner #studioGhibli_write{
+
+section .full_inner #studioGhibli_write {
     position: absolute;
     width: 600px;
-    top:70%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     transition: opacity 0.5s;
 }
-section .full_inner #scroll_info{
+
+section .full_inner #scroll_info {
     position: absolute;
-    bottom:10%;
-    left:50%;
+    bottom: 10%;
+    left: 50%;
     transform: translate(-50%);
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border:2px solid #00B6FF;
-    background-color: rgba(255, 255, 255,0.9);
+    border: 2px solid #00B6FF;
+    background-color: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(10px);
-    color:#00B6FF;
+    color: #00B6FF;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 4em;
-    row-gap:4px;
-    opacity:0;
+    row-gap: 4px;
+    opacity: 0;
     transition: all 0.5s;
 }
 
-section .full_inner #scroll_info span{
-    color:#00B6FF;
+section .full_inner #scroll_info span {
+    color: #00B6FF;
 }
 
-#main_section .full_inner #change_img_box{
+#main_section .full_inner #change_img_box {
     opacity: 0;
     position: absolute;
     width: 100vw;
@@ -250,12 +276,13 @@ section .full_inner #scroll_info span{
     background-color: white;
     transition: opacity 0.5s;
 }
-#main_section .full_inner #change_img_text{
+
+#main_section .full_inner #change_img_text {
     font-size: 30px;
     font-weight: 800;
     position: absolute;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
     transition-delay: 0.5s;
@@ -263,33 +290,37 @@ section .full_inner #scroll_info span{
 }
 
 /*Introduce Ghibli*/
-#introduce_ghibli .inner{
+#introduce_ghibli .inner {
     height: 1000px;
     /* background-color: #ffffff; */
     /* background-color: BLUE; */
 }
-#introduce_ghibli .inner img{
+
+#introduce_ghibli .inner img {
     width: 60%;
     position: absolute;
-    top:10%;
-    left:50%;
+    top: 10%;
+    left: 50%;
     transform: translateX(-50%);
     /* background-color: RED; */
 }
-#introduce_ghibli .inner .arrow_down{
+
+#introduce_ghibli .inner .arrow_down {
     position: absolute;
-    bottom:200px;
-    left:50%;
+    bottom: 200px;
+    left: 50%;
 }
 
 /*About Ghibli*/
-#about_ghibli{
+#about_ghibli {
     background-color: rgba(0, 182, 255, 0.1);
 }
-#about_ghibli .inner{
+
+#about_ghibli .inner {
     height: 1300px;
 }
-#about_ghibli .inner #about_ghibli_article_align{
+
+#about_ghibli .inner #about_ghibli_article_align {
     width: 100%;
     height: 100%;
     display: flex;
@@ -297,75 +328,126 @@ section .full_inner #scroll_info span{
     row-gap: 6%;
     justify-content: center;
     align-content: space-evenly;
-    
+
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_korean_name{
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_korean_name {
     font-size: 12em;
     font-weight: 800;
-    padding-top:20px;
+    padding-top: 20px;
     font-family: 'Nanum Gothic', sans-serif;
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_english_name{
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_english_name {
     font-size: 9em;
     font-weight: 800;
-    padding-top:4px;
+    padding-top: 4px;
     font-family: 'Nanum Gothic', sans-serif;
 }
+
 #about_ghibli .inner #about_ghibli_article_align #about_ghibli_article1,
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2{
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2 {
     width: 38%;
     height: 38%;
     background-color: #ffffff;
     border-radius: 20px;
-    padding-top:88px;
-    padding-left:42px;
+    padding-top: 88px;
+    padding-left: 42px;
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2 ul{
-    padding-left:4%;
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2 ul {
+    padding-left: 4%;
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2 ul li{
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article2 ul li {
     list-style-type: disc;
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article3{
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article3 {
     width: 38%;
     height: 45%;
     background-color: #ffffff;
     border-radius: 20px;
-    padding-top:88px;
-    padding-left:42px;
+    padding-top: 88px;
+    padding-left: 42px;
 }
-#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article3 #about_ghibli_article3_btn{
-margin-top:50px;
+
+#about_ghibli .inner #about_ghibli_article_align #about_ghibli_article3 #about_ghibli_article3_btn {
+    margin-top: 50px;
 }
 
 /*Ghibli Animation*/
-#ghibli_animation #ghibli_animation_article1{
-    text-align: center;
-    position: relative;
-    /* background-color: red; */
-    height: 900PX;
+
+#ghibli_animation .inner {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 }
-#ghibli_animation #ghibli_animation_article1 button{
-    margin-top:36px;
+
+#ghibli_animation .inner #article_area {
+    width: 90%
 }
-#ghibli_animation img{
+
+#ghibli_animation .inner .article_category,
+#ghibli_animation .inner .arrow_down {
     width: 100%;
 }
-#ghibli_animation #ghibli_animation_article1_all{
-    /* background-color: pink; */
-    position: absolute;
-    bottom:-4px;
-    left:50%;
-    transform:translateX(-50%);
-    z-index: 1;
-    margin:0;
+
+#ghibli_animation .inner #pagination_area {
+    width: 2%;
+    /* background-color: green; */
+}
+
+#ghibli_animation .inner #pagination_area #pagination {
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+    width: 24px;
+    row-gap: 15px;
+    /* background-color: red; */
+    top: 45%;
     transition: all 0.5s;
 }
-#ghibli_animation #ghibli_animation_article1_img_background{
-   position: absolute;
-   bottom: 0;
-   left:50%;
-    transform:translateX(-50%);
+
+#ghibli_animation .inner #pagination_area #pagination a {
+    display: block;
+    width: 100%;
+    height: 24px;
+    border-radius: 24px;
+    background-color: #00B6FF;
+}
+
+#ghibli_animation #ghibli_animation_article1 {
+    text-align: center;
+    position: relative;
+    height: 900px;
+    scroll-margin-top: 80px;
+}
+
+#ghibli_animation #ghibli_animation_article1 button {
+    margin-top: 36px;
+}
+
+#ghibli_animation img {
+    width: 100%;
+}
+
+#ghibli_animation #ghibli_animation_article1_all {
+    /* background-color: pink; */
+    position: absolute;
+    bottom: -4px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    margin: 0;
+    transition: all 0.5s;
+}
+
+#ghibli_animation #ghibli_animation_article1_img_background {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 80%;
     height: 25%;
     border-radius: 500px;
@@ -376,33 +458,185 @@ margin-top:50px;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#ghibli_animation #ghibli_animation_article1_haku{
+
+#ghibli_animation #ghibli_animation_article1_haku {
     width: 100%;
     transition: all 0.5s;
-    }
-#ghibli_animation #ghibli_animation_article1_haku img:nth-child(1){
+}
+
+#ghibli_animation #ghibli_animation_article1_haku img:nth-child(1) {
     position: absolute;
     width: 45%;
-    bottom:0;
-    left:15%;
+    bottom: 0;
+    left: 15%;
     z-index: 1;
+    animation: rightToLeft 3s ease alternate infinite;
 }
-#ghibli_animation #ghibli_animation_article1_haku img:nth-child(2){
+
+#ghibli_animation #ghibli_animation_article1_haku img:nth-child(2) {
     position: absolute;
     width: 42%;
-    bottom:10%;
-    right:10%;
+    bottom: 10%;
+    right: 10%;
     z-index: 1;
-    animation: haku 2s alternate infinite;
+
 }
-@keyframes haku{
+
+@keyframes haku {
     to {
-      transform:translateY(-30px);
+        transform: translateY(-30px);
     }
+
     from {
-      left:translateY(0px);
+        left: translateY(0px);
     }
-  }
-#ghibli_animation #ghibli_animation_article1_img_background_first{
+}
+
+#ghibli_animation #ghibli_animation_article1_img_background_first {
     transition: all 0.5s;
+}
+
+#ghibli_animation .article_row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 800px;
+}
+
+#ghibli_animation .button_big {
+    margin-top: 30px;
+}
+
+#ghibli_animation .article_row#ghibli_animation_article2 {
+    margin-top: 140px;
+    scroll-margin-top: 80px;
+}
+
+#ghibli_animation .article_row .article_align {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 8%;
+}
+
+#ghibli_animation .article_row .article_right {
+    position: relative;
+    height: 500px;
+    width: 40%;
+}
+
+#ghibli_animation .article_row .article_background {
+    z-index: -1;
+    right: 0;
+    border-radius: 50% 50% 0% 0%;
+    background: url('/img/main/animation_howl_Background.jpg') center / cover no-repeat;
+    animation: rightToTopBackground 50s ease alternate infinite;
+}
+
+#ghibli_animation .article_right .article_element {
+    width: 110%;
+    position: absolute;
+    bottom: 0;
+    animation: rightToLeft 3s ease alternate infinite;
+}
+
+@keyframes rightToLeft {
+    to {
+        transform: translateX(-30px);
+    }
+
+    from {
+        transform: translateX(-20px);
+    }
+}
+
+@keyframes rightToTopBackground {
+    to {
+        background-position: 40% 0%
+    }
+
+    from {
+        background-position: 50% 0%
+    }
+}
+#ghibli_animation_article3{
+    scroll-margin-top: 80px;
+}
+#ghibli_animation_article3.article_row .article_align {
+    flex-direction: row-reverse;
+}
+
+#ghibli_animation_article3.article_row .article_background {
+    position: relative;
+    z-index: -1;
+    right: 0;
+    border-radius: 50% 50% 0% 0%;
+    background: url('/img/main/aniamtion_totoro_Background1.png') center / cover no-repeat;
+    animation: righToLeftBackground2 50s ease alternate infinite;
+}
+
+#ghibli_animation_article3.article_row .article_background img:nth-child(1) {
+    position: absolute;
+    top: 0%;
+    left: -10%;
+    width: 40%;
+    animation: bottomToTop 2s alternate infinite;
+}
+
+#ghibli_animation_article3.article_row .article_background img:nth-child(2) {
+    position: absolute;
+    right: -20%;
+    top: 40%;
+    width: 70%;
+    animation: bottomToTop 2s -1s alternate infinite;
+}
+
+@keyframes bottomToTop {
+    to {
+        transform: translateY(0px);
+    }
+
+    from {
+        transform: translateY(10px);
+    }
+}
+
+@keyframes righToLeftBackground2 {
+    to {
+        background-position: 50% 0%
+    }
+
+    from {
+        background-position: 60% 0%
+    }
+}
+#ghibli_animation_article4.article_row {
+    margin-bottom: 140px;
+    scroll-margin-top: 80px;
+}
+#ghibli_animation_article4.article_row .article_background {
+    position: relative;
+    z-index: -1;
+    right: 0;
+    border-radius: 50% 50% 0% 0%;
+    background: url('/img/main/aniamtion_mononoke_Background.png') center / cover no-repeat;
+    animation: righToLeftBackground2 50s ease alternate infinite;
+}
+
+#ghibli_animation_article4.article_row .article_background img{
+    position: absolute;
+    bottom:0;
+    left: -10%;
+    width: 100%;
+    animation: rightToLeft2 3s alternate infinite;
+}
+
+@keyframes rightToLeft2 {
+    to {
+        transform: translateX(20px);
+    }
+
+    from {
+        transform: translateX(30px);
+    }
 }
