--- a/css/main.css
+++ b/css/main.css
@@ -402,19 +402,20 @@ section .full_inner #scroll_info span {
     position: sticky;
     display: flex;
     flex-direction: column;
-    width: 24px;
     row-gap: 15px;
     /* background-color: red; */
     top: 45%;
     transition: all 0.5s;
+    opacity: 0;
 }
 
 #ghibli_animation .inner #pagination_area #pagination a {
     display: block;
     width: 100%;
-    height: 24px;
+    width: 22px;
+    height: 22px;
     border-radius: 24px;
-    background-color: #00B6FF;
+    background-color: rgba(0, 182, 255, 0.2);
 }
 
 #ghibli_animation #ghibli_animation_article1 {
@@ -559,9 +560,11 @@ section .full_inner #scroll_info span {
         background-position: 50% 0%
     }
 }
-#ghibli_animation_article3{
+
+#ghibli_animation_article3 {
     scroll-margin-top: 80px;
 }
+
 #ghibli_animation_article3.article_row .article_align {
     flex-direction: row-reverse;
 }
@@ -610,10 +613,11 @@ section .full_inner #scroll_info span {
         background-position: 60% 0%
     }
 }
+
 #ghibli_animation_article4.article_row {
-    margin-bottom: 140px;
     scroll-margin-top: 80px;
 }
+
 #ghibli_animation_article4.article_row .article_background {
     position: relative;
     z-index: -1;
@@ -623,9 +627,9 @@ section .full_inner #scroll_info span {
     animation: righToLeftBackground2 50s ease alternate infinite;
 }
 
-#ghibli_animation_article4.article_row .article_background img{
+#ghibli_animation_article4.article_row .article_background img {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     left: -10%;
     width: 100%;
     animation: rightToLeft2 3s alternate infinite;
@@ -639,4 +643,96 @@ section .full_inner #scroll_info span {
     from {
         transform: translateX(30px);
     }
+}
+
+/*ghibli_others*/
+#ghibli_others .inner {
+    background-color: pink;
+}
+
+#ghibli_others .inner .article_category {
+    padding-top: 150px;
+}
+
+#ghibli_others .ghibli_other_article {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.ghibli_other_article .ghibli_other_content {
+    margin-left: 5%;
+}
+
+.ghibli_other_img img {
+    width: 100%;
+}
+
+.ghibli_other_article .ghibli_other_img {
+    width: 26%;
+    height: 440px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-left: 30px;
+    position: relative;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+}
+
+#ghibli_musical .ghibli_other_img .img_front img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    opacity:1;
+    z-index: 1;
+}
+
+#ghibli_musical .ghibli_other_img .img_back img {
+    top: 0;
+    left: 0;
+    transform: rotateY(180deg);
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    
+}
+
+.ghibli_other_img:hover {
+    transform: rotateY(180deg);
+}
+
+/*ghibli_world*/
+#ghibli_world .full_inner#ghibli_world_background{
+   margin-top:200px;
+    background-image: url('../img/main/ghibli_world.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 614px;
+    display: flex;
+
+}
+#ghibli_world .full_inner#ghibli_world_background .inner svg{
+    margin:0 auto;
+}
+
+#ghibli_world .full_inner#ghibli_world_background .inner h3{
+    margin-top:0px;
+    padding-top:200px;
+    padding-bottom:150px;
+    color:#FFFFFF;
+}
+.ghibli_world_tour{
+    width: 46%;
+    background-color: red;
+}
+.ghibli_world_tour .ghibli_world_tour_img{
+    width: 100%;
+    height: 600px;
+    height: auto;
+    background-color: #00B6FF;
+    /* background-image: url('../img/main/ghibli_world_tour_1.jpg'); */
 }
